--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: 黄沙志
     {% for post in site.posts %}
         
         <li>{{ post.date | date_to_string }} 
-<a href="{{ site.baseurl}}{{post.url}}"> {{ poat.title }} </a>
+<a href="{{ post.url | prepend: site.baseurl }}"> {{ post.title }} </a>
         </li>
     {% endfor %}
 </ul>
