--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@ title: 黄沙志
 
 <ul>
     {% for post in site.posts %}
-        
-        <li>{{ post.date | date_to_string }} 
-<a href="{{ post.url | prepend: site.baseurl }}"> {{ post.title }} </a>
-        </li>
+      <li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
 </ul>
 
